added database variables

--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,10 @@
 SECRET_KEY=django-insecure-fh5p^_*l-cce13bby9%1-%+v83q!p%6))paymb*no&h^o=p#)c
+DEBUG=True
+
+POSTGRES_HOST=postgres
+POSTGRES_POSR=5432
+POSTGRES_HOST=postgres
+POSTGRES_DB=test
+POSTGRES_USER=postgresuser
+POSTGRES_PASSWORD=postgrespassword
+
